# FreeRTOS-Plus-suite

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Makefile  README.md  RTOS-suite.ioc  led_task.c  main.c  mkdocs.yml
Core/Inc/: stm32f7xx_it.h
Core/Src/: main.c  stm32f7xx_it.c  usart.c
cmake/freertos/: CMakeLists.txt
cmake/stm32cubemx/: CMakeLists.txt
docs/: freertos.md  index.md
suite/freertos_config/: FreeRTOSConfig.h
